fixing the css files and adding style to the hotels pages

--- a/pages/hotel_booking/booking_deal.html
+++ b/pages/hotel_booking/booking_deal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../styles/style.css">
+    <link rel="stylesheet" href="../../styles/dealhotel.css">
     <script  type='module' src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <title>Book a stay</title>
@@ -21,10 +21,11 @@
         </nav>   
         <div class="menu-toggle" onclick="toggleMenu()"></div>
     </header>
-
+    
 
     <main>
-        <h1>Book a Hotel Say</h1>
+        <h1 class="text">Book a Hotel Say</h1>
+        
         <div id="hotel_stay_card">  </div>
 
 
