adding the links between the pages

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -14,7 +14,7 @@
             <a href="#" class="active">Home</a>
             <a href="#" onclick="location.href='../hotel_booking/hotel_booking_filter.html'">Stays</a>
             <a href="#">Flight</a>
-            <a href="#">Taxis</a>
+            <a href="#" onclick="location.href='../taxi/taxi.html'">Taxis</a>
             <a  onclick="signUp()" class="button">Register</a>
             <a  onclick="signIn()" class="button">Sign in</a>
         </nav>   
