--- a/pages/hotel_booking/booking_deal.html
+++ b/pages/hotel_booking/booking_deal.html
@@ -15,7 +15,7 @@
             <a href="#"  onclick="location.href='../home/index.html'">Home</a>
             <a href="#" class="active">Stays</a>
             <a href="#">Flight</a>
-            <a href="#" >Taxis</a>
+            <a href="#" onclick="location.href='../taxi/taxi.html'">Taxis</a>
             <a  onclick="signUp()" class="button">Register</a>
             <a  onclick="signIn()" class="button">Sign in</a>
         </nav>   
