--- a/pages/hotel_booking/hotel_booking_filter.html
+++ b/pages/hotel_booking/hotel_booking_filter.html
@@ -14,7 +14,7 @@
             <a href="#"  onclick="location.href='../home/index.html'">Home</a>
             <a href="#" class="active">Stays</a>
             <a href="#">Flight</a>
-            <a href="#" onclick="location.href='../home/index.html'">Taxis</a>
+            <a href="#" onclick="location.href='../taxi/taxi.html.html'">Taxis</a>
             <a  onclick="signUp()" class="button">Register</a>
             <a  onclick="signIn()" class="button">Sign in</a>
         </nav>   
