forgot to commit those before

--- a/flight/pages/flightMain.html
+++ b/flight/pages/flightMain.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flights Main Page</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/flight/styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
@@ -46,11 +46,11 @@
         <div class="footer-container">
             <h2 class="footer-logo">Flyteer</h2>
             <div class="footer-icons">
-                <a href="#"><img src="/flyteer_frontend/Images/phone-icon.png" alt="Phone Icon"></a>
-                <a href="#"><img src="/flyteer_frontend/Images/instagram-icon.jpg" alt="Instagram Icon"></a>
-                <a href="#"><img src="/flyteer_frontend/Images/facebook-icon.png" alt="Facebook Icon"></a>
-                <a href="#"><img src="/flyteer_frontend/Images/google-icon.jpg" alt="Google Plus Icon"></a>
-                <a href="#"><img src="/flyteer_frontend/Images/youtube-icon.png" alt="YouTube Icon"></a>
+                <a href="#"><img src="/flight/Images/phone-icon.png" alt="Phone Icon"></a>
+                <a href="#"><img src="/flight/Images/instagram-icon.jpg" alt="Instagram Icon"></a>
+                <a href="#"><img src="/flight/Images/facebook-icon.png" alt="Facebook Icon"></a>
+                <a href="#"><img src="/flight/Images/google-icon.jpg" alt="Google Plus Icon"></a>
+                <a href="#"><img src="/flight/Images/youtube-icon.png" alt="YouTube Icon"></a>
             </div>
             <div class="footer-links">
                 <a href="#">About</a>
